# airs-pan-2025-notebook

./: .gitmodules  README.md  environment-specific.yml  environment.yml
src/airs-pan-ml/: pyproject.toml
src/airs-pan-ml/airs_pan_ml/: features.py  model_eval.py  plots.py  readers.py
src/airs-pan-ml/airs_pan_ml/binary_flag/: metrics.py  training.py
src/muses_utils/: pyproject.toml  setup.py
src/muses_utils/muses_utils/: atmosphere.py  conversions.py  helpers.py  images.py  opendap.py  paths.py  plots.py  quality.py  quick_plots.py  readers.py  testers.py
src/muses_utils/muses_utils/validation/: atom_pan.py
